Extending User Management (#14)
* adding route to delete user from internal servie

* commenting out protector

* documenting new user deletion route

* upgrading dependencies

* fixing some formatting errors and missing values

* fixing openapi yaml syntax error

* added permission output to user json

* replaces permission listing with user direct output

* updated user schema

* adding missing json marshal output

* adding missing administrator scope assignment

* changed user refresh mode

* adding function for deleting scopes from a user

* decreased token validity time for access token

* adding query to remove permissions

* adding permission management routes

* extending openapi documentation

* changed error return

* updated error checking logic

* added new errors

* removing unnecessary type declarations

* adding openid configuration output to get uri for JWKS

* adding the sync dependency

* streamlining router configuration and enabled graceful shutdowns

* updating docker build to decrease build size

* fixing missing imports

* enabling caching in docker builds

* fixing new syntax error

* optimizing data copy

* fixing yaml syntax error in openapi

* fixing user registration error

* updating dockerfile to speedup builds

* updating login parameter handling to include the redirection uri

* hardening code exchange

* remove enum value and replace with case-insensitive pattern

* updating docker build to produce platformed variants of images

* fixing missing return argument

* adding security schema for service for more detailed documentation

* fixing json marshaling and updating permission generation

* fixing service serialization

* updating openid connect outputs

* returning to using "user-management" as issuer

* fixing errors in client.go

* extending openid proto resolving

* enabling trust of local clients

* adding package for easier handling of openid connect value generation

* switching to json output in docker

* utilizing new pack
