# types/user.go
@@ -4,6 +4,7 @@ import (
 	"context"
 
 	"github.com/georgysavva/scany/v2/pgxscan"
+	"github.com/go-jose/go-jose/v4/json"
 
 	"microservice/internal/db"
 )
@@ -23,6 +24,23 @@ func (u User) GetID() string {
 }
 
 func (u User) Permissions() map[string][]string {
+	if u.Administrator {
+		query, err := db.Queries.Raw("get-services")
+		if err != nil {
+			panic(err)
+		}
+		var services []Service
+		err = pgxscan.Select(context.Background(), db.Pool, &services, query)
+		if err != nil {
+			panic(err)
+		}
+
+		permissions := make(map[string][]string)
+		for _, service := range services {
+			permissions[service.Name] = append(permissions[service.Name], service.SupportedScopes...)
+		}
+		return permissions
+	}
 	query, err := db.Queries.Raw("get-user-permissions")
 	if err != nil {
 		return nil
@@ -54,7 +72,26 @@ func (u User) IsActive() bool {
 	return !u.Disabled
 }
 
-type ExtendedUser struct {
-	User
-	Permissions map[string][]string `json:"permissions"`
+func (u User) MarshalJSON() ([]byte, error) {
+	type output struct {
+		ID                 string              `json:"id" db:"id"`
+		ExternalIdentifier string              `json:"externalIdentifier" db:"external_identifier"`
+		Name               string              `json:"name" db:"name"`
+		Email              string              `json:"email" db:"email"`
+		Username           string              `json:"username" db:"username"`
+		Disabled           bool                `json:"disabled" db:"disabled"`
+		Administrator      bool                `json:"administrator" db:"is_admin"`
+		Permissions        map[string][]string `json:"permissions"`
+	}
+	o := output{
+		ID:                 u.ID,
+		ExternalIdentifier: u.ExternalIdentifier,
+		Name:               u.Name,
+		Email:              u.Email,
+		Username:           u.Username,
+		Disabled:           u.Disabled,
+		Administrator:      u.Administrator,
+		Permissions:        u.Permissions(),
+	}
+	return json.Marshal(o)
 }
